fixed the overflow-x problem

--- a/public/app.css
+++ b/public/app.css
@@ -4,6 +4,7 @@ body {
 	font-family: 'Lato', sans-serif;
     height: 100%;
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 header {
